Fixed text wrapping

--- a/public/stylesheets/main/upload.css
+++ b/public/stylesheets/main/upload.css
@@ -85,8 +85,10 @@
 
 .fileName, #exampleName {
   width: 150px;
+  height: 30px;
   text-overflow: ellipsis;
   overflow: hidden;
+  white-space: nowrap;
   padding-right: 10px;
   flex-grow: 1;
 }
